refactor: 使用monorepo组织代码

--- a/package.json
+++ b/package.json
@@ -1,5 +1,6 @@
 {
-  "name": "@charrue/vump",
+  "name": "vump",
+  "private": true,
   "version": "0.0.1",
   "description": "🚴类Vue语法的微信小程序轻量级框架, 基于原生开发标准",
   "keywords": [
@@ -9,13 +10,8 @@
     "vitest"
   ],
   "license": "MIT",
-  "main": "./dist/index.cjs.js",
-  "jsdelivr": "./dist/index.iife.min.js",
-  "unpkg": "./dist/index.iife.min.js",
-  "module": "dist/index.es.js",
-  "types": "./dist/index.d.ts",
   "scripts": {
-    "build": "rollup -c",
+    "build": "pnpm run build --filter=@charrue/vump",
     "lint": "eslint --fix",
     "prepare": "husky install",
     "test": "vitest"
@@ -28,30 +24,21 @@
       "path": "./node_modules/cz-conventional-changelog"
     }
   },
-  "dependencies": {
-    "ramda": "^0.28.0"
-  },
   "devDependencies": {
     "@babel/eslint-parser": "^7.16.3",
     "@charrue/eslint-config-base": "^0.1.3",
     "@commitlint/cli": "^15.0.0",
     "@commitlint/config-conventional": "^15.0.0",
-    "@rollup/plugin-commonjs": "^21.0.1",
-    "@rollup/plugin-node-resolve": "^13.1.3",
-    "@types/ramda": "^0.28.11",
     "@typescript-eslint/eslint-plugin": "^5.5.0",
     "@typescript-eslint/parser": "^5.5.0",
     "commitizen": "^4.2.4",
     "cz-conventional-changelog": "^3.3.0",
-    "esbuild": "^0.14.1",
     "eslint": "^8.3.0",
+    "eslint-config-prettier": "^8.5.0",
+    "eslint-plugin-prettier": "^4.0.0",
     "husky": "^7.0.4",
     "lint-staged": "^12.1.2",
-    "miniprogram-api-typings": "^3.4.6",
-    "rimraf": "^3.0.2",
-    "rollup": "^2.60.2",
-    "rollup-plugin-dts": "^4.0.1",
-    "rollup-plugin-esbuild": "^4.7.2",
+    "prettier": "^2.6.2",
     "tslib": "^2.3.1",
     "typescript": "^4.5.2",
     "vite": "^2.8.1",
