--- a/.eslintrc
+++ b/.eslintrc
@@ -4,12 +4,18 @@
     "node": true,
     "jest": true
   },
-  "extends": ["@charrue/base", "plugin:@typescript-eslint/recommended"],
+  "extends":  [
+    "@charrue/base",
+    "plugin:@typescript-eslint/recommended",
+    "prettier",
+    "plugin:prettier/recommended"
+  ],
   "parser": "@typescript-eslint/parser",
-  "plugins": ["@typescript-eslint"],
   "rules": {
     "no-console": "off",
     "no-shadow": "off",
+    "no-plusplus": "off",
+    "no-magic-numbers": "off",
     "@typescript-eslint/indent": ["error", 2],
     "@typescript-eslint/no-unused-vars": "error",
     "@typescript-eslint/no-explicit-any": "off",
