--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,6 +1,6 @@
 {
   // see https://www.typescriptlang.org/tsconfig to better understand tsconfigs
-  "include": ["src"],
+  "include": ["packages/core/src"],
   "compilerOptions": {
     "module": "esnext",
     "baseUrl": ".",
@@ -23,7 +23,6 @@
     "skipLibCheck": true,
     "forceConsistentCasingInFileNames": true,
     "noEmit": true,
-    "types": ["miniprogram-api-typings"],
     "typeRoots": [
       "node_modules/@types"
     ]
