--- a/packages/core/package.json
+++ b/packages/core/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@charrue/vump",
-  "version": "0.0.1",
+  "version": "0.1.1",
   "description": "🚴类Vue语法的微信小程序轻量级框架, 基于原生开发标准",
   "keywords": [
     "typescript",
@@ -20,6 +20,7 @@
     "test": "vitest"
   },
   "dependencies": {
+    "miniprogram-computed": "^4.3.8",
     "ramda": "^0.28.0"
   },
   "devDependencies": {
