test(core): 使用miniprogram-simulate对createComponent进行测试

--- a/packages/core/.eslintrc
+++ b/packages/core/.eslintrc
@@ -1,3 +1,6 @@
 {
-  "extends": "../../.eslintrc"
+  "extends": "../../.eslintrc",
+  "rules": {
+    "@typescript-eslint/ban-ts-comment": "off"
+  }
 }
