--- a/package.json
+++ b/package.json
@@ -14,7 +14,7 @@
     "build": "pnpm run build --filter=@charrue/vump",
     "lint": "pnpm run lint --filter=@charrue/vump",
     "prepare": "husky install",
-    "test": "vitest"
+    "test": "pnpm run test --filter=@charrue/vump"
   },
   "lint-staged": {
     "!(*.d).ts": "npm run lint"
@@ -37,6 +37,7 @@
     "eslint-config-prettier": "^8.5.0",
     "eslint-plugin-prettier": "^4.0.0",
     "husky": "^7.0.4",
+    "jsdom": "^19.0.0",
     "lint-staged": "^12.1.2",
     "prettier": "^2.6.2",
     "tslib": "^2.3.1",
