--- a/packages/core/package.json
+++ b/packages/core/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@charrue/vump",
-  "version": "0.1.2",
+  "version": "0.1.3",
   "description": "🚴类Vue语法的微信小程序轻量级框架, 基于原生开发标准",
   "keywords": [
     "typescript",
@@ -21,8 +21,9 @@
   },
   "dependencies": {
     "miniprogram-computed": "^4.3.8",
-    "ramda": "^0.28.0",
-    "westore": "^0.1.9"
+    "mobx-miniprogram": "^4.13.2",
+    "mobx-miniprogram-bindings": "^2.1.5",
+    "ramda": "^0.28.0"
   },
   "devDependencies": {
     "@rollup/plugin-commonjs": "^21.0.1",
@@ -32,8 +33,6 @@
     "miniprogram-api-typings": "^3.4.6",
     "miniprogram-exparser": "^2.15.0",
     "miniprogram-simulate": "^1.5.7",
-    "mobx-miniprogram": "^4.13.2",
-    "mobx-miniprogram-bindings": "^2.1.5",
     "rimraf": "^3.0.2",
     "rollup": "^2.60.2",
     "rollup-plugin-dts": "^4.0.1",
