--- a/packages/core/package.json
+++ b/packages/core/package.json
@@ -1,7 +1,7 @@
 {
   "name": "@charrue/vump",
-  "version": "0.1.3",
-  "description": "🚴类Vue语法的微信小程序轻量级框架, 基于原生开发标准",
+  "version": "0.1.4",
+  "description": "🚴类Vue语法的微信小程序轻量级工具库，基于原生开发标准",
   "keywords": [
     "typescript",
     "charrue",
@@ -10,10 +10,12 @@
   ],
   "license": "MIT",
   "main": "./dist/index.cjs.js",
-  "jsdelivr": "./dist/index.iife.min.js",
-  "unpkg": "./dist/index.iife.min.js",
   "module": "dist/index.es.js",
   "types": "./dist/index.d.ts",
+  "files": [
+    "dist",
+    "README.md"
+  ],
   "scripts": {
     "build": "rollup -c",
     "lint": "eslint --fix src/**/*.ts",
