--- a/packages/core/package.json
+++ b/packages/core/package.json
@@ -1,16 +1,16 @@
 {
   "name": "@charrue/vump",
-  "version": "0.1.4",
-  "description": "🚴类Vue语法的微信小程序轻量级工具库，基于原生开发标准",
+  "version": "0.1.5",
+  "description": "🚴类Vue语法的微信小程序轻量级工具库, 基于原生开发标准",
   "keywords": [
     "typescript",
-    "charrue",
     "miniprogram",
-    "vitest"
+    "vitest",
+    "charrue"
   ],
   "license": "MIT",
-  "main": "./dist/index.cjs.js",
-  "module": "dist/index.es.js",
+  "main": "./dist/index.js",
+  "module": "dist/index.mjs",
   "types": "./dist/index.d.ts",
   "files": [
     "dist",
@@ -24,13 +24,11 @@
   "dependencies": {
     "miniprogram-computed": "^4.3.8",
     "mobx-miniprogram": "^4.13.2",
-    "mobx-miniprogram-bindings": "^2.1.5",
-    "ramda": "^0.28.0"
+    "mobx-miniprogram-bindings": "^2.1.5"
   },
   "devDependencies": {
     "@rollup/plugin-commonjs": "^21.0.1",
     "@rollup/plugin-node-resolve": "^13.1.3",
-    "@types/ramda": "^0.28.11",
     "esbuild": "^0.14.1",
     "miniprogram-api-typings": "^3.4.6",
     "miniprogram-exparser": "^2.15.0",
@@ -38,6 +36,7 @@
     "rimraf": "^3.0.2",
     "rollup": "^2.60.2",
     "rollup-plugin-dts": "^4.0.1",
-    "rollup-plugin-esbuild": "^4.7.2"
+    "rollup-plugin-esbuild": "^4.7.2",
+    "ts-toolbelt": "6.15.1"
   }
 }
