--- a/packages/example/package.json
+++ b/packages/example/package.json
@@ -1,14 +1,15 @@
 {
-  "name": "miniprogram-quickstart",
+  "name": "example",
   "version": "1.0.0",
   "description": "",
-  "scripts": {
-  },
+  "scripts": {},
   "keywords": [],
   "author": "",
   "license": "",
   "dependencies": {
-    "@charrue/vump": "workspace:*"
+    "@charrue/vump": "workspace:*",
+    "mobx-miniprogram": "^4.13.2",
+    "mobx-miniprogram-bindings": "^2.1.5"
   },
   "devDependencies": {
     "miniprogram-api-typings": "^2.8.3-1"
