feat: complete data & computed & watch option by @vue/reactivity

--- a/packages/core/.eslintrc
+++ b/packages/core/.eslintrc
@@ -1,6 +1,9 @@
 {
   "extends": "../../.eslintrc",
   "rules": {
-    "@typescript-eslint/ban-ts-comment": "off"
+    "@typescript-eslint/ban-ts-comment": "off",
+    "@typescript-eslint/no-empty-function": "off",
+    "no-param-reassign": "off",
+    "consistent-return": "off"
   }
 }
