--- a/package.json
+++ b/package.json
@@ -14,7 +14,7 @@
     "build": "pnpm run build --filter=@charrue/vump",
     "lint": "pnpm run lint --filter=@charrue/vump",
     "prepare": "husky install",
-    "test": "pnpm run test --filter=@charrue/vump",
+    "test": "pnpm --filter=@charrue/vump run test",
     "changelog": "conventional-changelog -p angular -i CHANGELOG.md -s"
   },
   "lint-staged": {
@@ -30,6 +30,7 @@
     "@charrue/eslint-config-base": "^0.1.3",
     "@commitlint/cli": "^15.0.0",
     "@commitlint/config-conventional": "^15.0.0",
+    "@types/node": "^18.11.6",
     "@typescript-eslint/eslint-plugin": "^5.5.0",
     "@typescript-eslint/parser": "^5.5.0",
     "commitizen": "^4.2.4",
