--- a/packages/core/package.json
+++ b/packages/core/package.json
@@ -27,6 +27,8 @@
   "devDependencies": {
     "@rollup/plugin-commonjs": "^21.0.1",
     "@rollup/plugin-node-resolve": "^13.1.3",
+    "@vue-reactivity/watch": "^0.2.0",
+    "@vue/reactivity": "3.2.41",
     "esbuild": "^0.14.1",
     "miniprogram-api-typings": "^3.4.6",
     "miniprogram-exparser": "^2.15.0",
