--- a/packages/core/tsconfig.json
+++ b/packages/core/tsconfig.json
@@ -2,5 +2,6 @@
   "extends": "../../tsconfig.json",
   "compilerOptions": {
     "types": ["miniprogram-api-typings"]
-  }
+  },
+  "include": ["./index.d.ts", "src", "tests"]
 }
