--- a/packages/core/package.json
+++ b/packages/core/package.json
@@ -17,7 +17,7 @@
     "README.md"
   ],
   "scripts": {
-    "build": "rollup -c",
+    "build": "unbuild",
     "lint": "eslint --fix src/**/*.ts",
     "test": "vitest"
   },
@@ -25,18 +25,12 @@
     "miniprogram-computed": "^4.3.8"
   },
   "devDependencies": {
-    "@rollup/plugin-commonjs": "^21.0.1",
-    "@rollup/plugin-node-resolve": "^13.1.3",
     "@vue-reactivity/watch": "^0.2.0",
     "@vue/reactivity": "3.2.41",
-    "esbuild": "^0.14.1",
     "miniprogram-api-typings": "^3.4.6",
     "miniprogram-exparser": "^2.15.0",
     "miniprogram-simulate": "^1.5.7",
-    "rimraf": "^3.0.2",
-    "rollup": "^2.60.2",
-    "rollup-plugin-dts": "^4.0.1",
-    "rollup-plugin-esbuild": "^4.7.2",
-    "ts-toolbelt": "6.15.1"
+    "ts-toolbelt": "6.15.1",
+    "unbuild": "^0.9.4"
   }
 }
