--- a/.eslintrc
+++ b/.eslintrc
@@ -5,8 +5,7 @@
     "jest": true
   },
   "extends":  [
-    "@charrue/base",
-    "plugin:@typescript-eslint/recommended",
+    "@charrue/typescript",
     "prettier",
     "plugin:prettier/recommended"
   ],
@@ -19,6 +18,12 @@
     "@typescript-eslint/indent": ["error", 2],
     "@typescript-eslint/no-unused-vars": "error",
     "@typescript-eslint/no-explicit-any": "off",
-    "@typescript-eslint/explicit-module-boundary-types": "off"
+    "@typescript-eslint/explicit-module-boundary-types": "off",
+    "@typescript-eslint/ban-ts-comment": "off",
+    "@typescript-eslint/no-empty-function": "off",
+    "no-param-reassign": "off",
+    "no-underscore-dangle": "off",
+    "func-style": "off",
+    "consistent-return": "off"
   }
 }
