--- a/packages/core/.eslintrc
+++ b/packages/core/.eslintrc
@@ -1,11 +1,3 @@
 {
-  "extends": "../../.eslintrc",
-  "rules": {
-    "@typescript-eslint/ban-ts-comment": "off",
-    "@typescript-eslint/no-empty-function": "off",
-    "no-param-reassign": "off",
-    "no-underscore-dangle": "off",
-    "func-style": "off",
-    "consistent-return": "off"
-  }
+  "extends": "../../.eslintrc"
 }
