feat: diff data before setData

--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     }
   },
   "devDependencies": {
+    "@charrue/eslint-config-typescript": "^0.3.0",
     "@commitlint/cli": "^15.0.0",
     "@commitlint/config-conventional": "^15.0.0",
     "@types/node": "^18.11.6",
