--- a/.eslintrc
+++ b/.eslintrc
@@ -16,6 +16,7 @@
     "no-plusplus": "off",
     "no-magic-numbers": "off",
     "@typescript-eslint/indent": ["error", 2],
+    "@typescript-eslint/consistent-type-assertions": "off",
     "@typescript-eslint/no-unused-vars": "error",
     "@typescript-eslint/no-explicit-any": "off",
     "@typescript-eslint/explicit-module-boundary-types": "off",
