--- a/packages/core/package.json
+++ b/packages/core/package.json
@@ -10,7 +10,6 @@
   ],
   "license": "MIT",
   "main": "./dist/index.js",
-  "module": "dist/index.mjs",
   "types": "./dist/index.d.ts",
   "files": [
     "dist",
@@ -18,6 +17,7 @@
   ],
   "scripts": {
     "build": "unbuild",
+    "postbuild": "node scripts/rename-ext.js",
     "lint": "eslint --fix src/**/*.ts",
     "test": "vitest"
   },
