--- a/packages/core/package.json
+++ b/packages/core/package.json
@@ -16,7 +16,7 @@
     "README.md"
   ],
   "scripts": {
-    "build": "unbuild",
+    "build": "tsup",
     "postbuild": "node scripts/rename-ext.js",
     "lint": "eslint --fix src/**/*.ts",
     "test": "vitest"
@@ -28,6 +28,6 @@
     "miniprogram-api-typings": "^3.4.6",
     "miniprogram-exparser": "^2.15.0",
     "miniprogram-simulate": "^1.5.7",
-    "unbuild": "^0.9.4"
+    "tsup": "^6.4.0"
   }
 }
