--- a/packages/core/.eslintrc
+++ b/packages/core/.eslintrc
@@ -1,6 +1,7 @@
 {
   "extends": "../../.eslintrc",
   "rules": {
-    "import/no-cycle": "off"
+    "import/no-cycle": "off",
+    "@typescript-eslint/indent": "off"
   }
 }
