ci: fix pnpm publish error

--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -25,7 +25,7 @@ jobs:
 
       - run: pnpm install
       - run: pnpm run build
-
-      - run: pnpm publish --access=public --filter=@charrue/vump
+      - run: cd packages/core
+      - run: pnpm publish --access=public
         env:
           NODE_AUTH_TOKEN: ${{ secrets.NPM_TOKEN }}
