--- a/package.json
+++ b/package.json
@@ -40,6 +40,7 @@
     "lint-staged": "^12.1.2",
     "prettier": "^2.6.2",
     "tslib": "^2.3.1",
+    "tsup": "^6.5.0",
     "typescript": "^4.5.2",
     "vite": "^2.8.1",
     "vitest": "^0.3.2"
