--- a/package.json
+++ b/package.json
@@ -13,6 +13,8 @@
   "scripts": {
     "build": "pnpm --filter=@charrue/vump run build",
     "lint": "pnpm --filter=@charrue/vump run lint",
+    "docs:dev": "pnpm --filter=docs run dev",
+    "docs:deploy": "pnpm --filter=docs run deploy",
     "prepare": "husky install",
     "test": "pnpm --filter=@charrue/vump run test",
     "changelog": "conventional-changelog -p angular -i CHANGELOG.md -s"
